--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Beranda</title>
+  <title>Home</title>
   <link rel="icon" href="assets/images/Logo.png" type="image/png" />
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
@@ -25,7 +25,7 @@
   </header>
 
   <div class="sidebar" id="sidebar">
-    <a href="index.html">Beranda</a>
+    <a href="index.html">Home</a>
     <a href="chief-gears-simulator.html">Chief Gear Simulator</a>
   </div>
   <div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
@@ -33,7 +33,7 @@
   <div class="container">
     <div class="card">
       <h2>Welcome</h2>
-      <p>Hello! I'm Oriana, a solo developer. Welcome to my personal project: Chief Gear Simulator.
+      <p>Hello! I'm Leo, a solo developer. Welcome to my personal project: Chief Gear Simulator.
 
 This simulator allows you to estimate the materials required to upgrade gears all the way to max level. It also features a Total Material Used summary that automatically tracks all materials consumed.
 
@@ -46,7 +46,7 @@ If you find this project helpful and would like to support my work, you can make
 <br>
 <br>
 <br>
-<a href="https://ko-fi.com/orianadev" class="btn">Donate</a>
+<a href="https://instagram.com/ik_3" class="btn">Instagram</a>
 <br>
 <br>
 <br>
