--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ To help you better match your game account, I've added features like Set Level, 
 
 Please note: this tool is strictly for simulation and personal calculation purposes only. It is not intended for any illegal activity whatsoever.
 
-If you find this project helpful and would like to support my work, you can make a donation through this link:
+If you find this project helpful and would like to support my work, you can make a contact through this link:
 
 <br>
 <br>
