--- a/chief-gears-simulator.html
+++ b/chief-gears-simulator.html
@@ -27,7 +27,7 @@
   </header>
 
   <div class="sidebar" id="sidebar">
-    <a href="index.html">Beranda</a>
+    <a href="index.html">Home</a>
     <a href="chief-gears-simulator.html">Chief Gear Simulator</a>
   </div>
   <div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
