--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ If you find this project helpful and would like to support my work, you can make
 <br>
 <br>
 <br>
-<a href="https://instagram.com/ik_3" class="btn">Instagram</a>
+<a href="https://ko-fi.com/eliasleo" class="btn">Donate</a>
 <br>
 <br>
 <br>
