--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ If you find this project helpful and would like to support my work, you can make
 <br>
 <br>
 <br>
+<a href="discord://discordapp.com/users/384692013855145993" class="btn">Discord</a>
 <a href="https://ko-fi.com/eliasleo" class="btn">Donate</a>
 <br>
 <br>
